k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: development-app
  namespace: development-app
  labels:
    app: development-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: development-app

  template:
    metadata:
      labels:
        app: development-app

    spec:
      containers:
        - name: development-app

          image: docker.io/venkatesh2007567/development-app:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 8000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 20
