k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: development-app
  namespace: development-app
  labels:
    app: development-app

spec:
  type: ClusterIP

  selector:
    app: development-app

  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
