k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: development-app
  namespace: development-app
spec:
  ingressClassName: nginx
  rules:
    - host: development-app.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: development-app
                port:
                  number: 8000
